# cerberus-api

./: Cargo.toml  README.md  build.rs  go.mod  go.sum
.github/workflows/: check-generate.yml  check-go-generate.yml  check-rs-generate.yml
examples/: basic.rs
pkg/api/v1/: admin.pb.go  admin.pb.gw.go  admin_grpc.pb.go  key_manager.pb.go  key_manager.pb.gw.go  key_manager_grpc.pb.go  signer.pb.go  signer.pb.gw.go  signer_grpc.pb.go
proto/: admin.proto  key_manager.proto  signer.proto
src/: main.rs
swagger/: grpc.swagger.yaml
